[gd_scene load_steps=8 format=3 uid="uid://cx6vt1blsx67n"]

[ext_resource type="Script" path="res://Scenes/baby_good_scene.gd" id="1_k6j1q"]
[ext_resource type="Texture2D" uid="uid://dmkkki7ggatpn" path="res://Assets/CribView/Crib.png" id="2_30ptl"]
[ext_resource type="Texture2D" uid="uid://bdinmu28q70qu" path="res://Assets/CribView/TopLeft.png" id="3_6100b"]
[ext_resource type="Texture2D" uid="uid://lwj0yeqlq0g6" path="res://Assets/CribView/happyBaby.png" id="4_buupn"]
[ext_resource type="AudioStream" uid="uid://s1o5cd156l5a" path="res://Assets/Sounds/WIN sound effect no copyright.wav" id="5_3rc7p"]

[sub_resource type="Animation" id="Animation_dcig4"]
resource_name = "zoom"
length = 4.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(3, 3)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gym2e"]
_data = {
"zoom": SubResource("Animation_dcig4")
}

[node name="babyGoodScene" type="Node2D"]
script = ExtResource("1_k6j1q")

[node name="cribView" type="Sprite2D" parent="."]
position = Vector2(578, 324)
texture = ExtResource("2_30ptl")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Camera2D")
libraries = {
"": SubResource("AnimationLibrary_gym2e")
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(578, 325)
zoom = Vector2(1.87805, 1.87805)

[node name="sleepingBaby" type="Sprite2D" parent="."]
position = Vector2(780, 429)
texture = ExtResource("3_6100b")

[node name="goodBaby" type="Sprite2D" parent="."]
visible = false
position = Vector2(780, 429)
texture = ExtResource("4_buupn")

[node name="victorySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_3rc7p")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
